--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
+@import './styles/SimpleLineIcons/css/simple-line-icons.css';
+
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
